# UniDepth

./: .gitignore  Dockerfile  README.md  hubconf.py  install.sh  lint.sh  pyproject.toml  requirements.txt
assets/demo/: intrinsics.npy
assets/docs/: V2_README.md
configs/: config_v1_cnvnxtl.json  config_v1_vitl14.json  config_v2_vitb.json  config_v2_vitb14.json  config_v2_vitl.json  config_v2_vitl14.json  config_v2_vits.json  config_v2_vits14.json  config_v2old_vitl14.json  config_v2old_vits.json  train_v1_vitl14.json
scripts/: README.md  demo.py  hf.py  train.py
unidepth/datasets/: _2d3ds.py  _4dor.py  __init__.py  a2d2.py  adt.py  aimotive.py  argoverse.py  argoverse2.py  argoverse2s.py  arkit.py  ase.py  base_dataset.py  bdd.py  bedlam.py  behave.py  blendedmvg.py  cityscape.py  ddad.py  deep360.py  dense.py  diml.py  diode.py  dl3dv.py  driving_stereo.py  dtu_rmvd.py  dummy.py  dynamic_replica.py  eden.py  eth3d.py  eth3d_rmvd.py  facedepth.py  flsea.py  futurehouse.py  gibson.py  hammer.py  hm3d.py  hoi4d.py  hrwsi.py  hypersim.py  ibims.py  (+45 more)
unidepth/layers/: __init__.py  activation.py  attention.py  convnext.py  drop_path.py  layer_scale.py  mlp.py  nystrom_attention.py  positional_encoding.py  upsample.py
unidepth/models/: __init__.py  encoder.py
unidepth/ops/: __init__.py  losses.py  scheduler.py
unidepth/utils/: __init__.py  camera.py  chamfer_distance.py  constants.py  coordinate.py  distributed.py  ema_torch.py  evaluation_depth.py  geometric.py  misc.py  positional_embedding.py  sht.py  validation.py  visualization.py
(+61 files in other folders)
